envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 14999 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 15006 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: some_service }
          http_filters:
          - name: envoy.http.fault
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.http.fault.v2.HTTPFault
              delay:
                fixed_delay: 1s
                percentage:
                  numerator: 100
                  denominator: HUNDRED
          - name: envoy.filters.http.router
            typed_config: {}
  clusters:
  - name: some_service
    connect_timeout: 4s
    type: STATIC
    lb_policy: ROUND_ROBIN
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 5000 }}]
